--- a/BighornVisitationAnalysisSummer2019.Rmd
+++ b/BighornVisitationAnalysisSummer2019.Rmd
@@ -268,6 +268,10 @@ library(lubridate)
 renodups$DateTime <- strptime(renodups$DateTime, "%Y%m%d %H:%M")
 renodups$DateTimect <- as.POSIXct(renodups$DateTime, tz = "America/Los_Angeles", format = "%Y%m%d %H:%M")
 
+# Making the GO_Date into a Date:
+renodups$GO_Date <- strptime(renodups$GO_Date, "%Y%m%d")
+renodups$GO_Date <- as.POSIXct(renodups$GO_Date, tz = "America/Los_Angeles", format = "%Y%m%d")
+
 Marbobs <- renodups[renodups$GO_RangeCode == "Marb", ]
 Marbcutobs <- Marbobs[(Marbobs$DateTimect >= as.POSIXct("2019-05-17 10:49:00") & Marbobs$DateTimect <= as.POSIXct("2019-05-25 00:00:00")) | (Marbobs$DateTimect >= as.POSIXct("2019-06-04 20:00:00") & Marbobs$DateTimect <= as.POSIXct("2019-06-12 13:32:00")) | (Marbobs$DateTimect >= as.POSIXct("2019-06-18 17:19:00") & Marbobs$DateTimect <= as.POSIXct("2019-06-23 00:00:00"))| (Marbobs$DateTimect >= as.POSIXct("2019-06-25 14:49:00") & Marbobs$DateTimect <= as.POSIXct("2019-06-30 10:46:00"))| (Marbobs$DateTimect >= as.POSIXct("2019-07-10 08:45:00") & Marbobs$DateTimect <= as.POSIXct("2019-07-13 23:00:18")) | (Marbobs$DateTimect >= as.POSIXct("2019-07-17 11:46:00") & Marbobs$DateTimect <= as.POSIXct("2019-07-25 10:30:00")) | (Marbobs$DateTimect >= as.POSIXct("2019-07-31 20:52:00") & Marbobs$DateTimect <= as.POSIXct("2019-08-04 13:13:03")) | (Marbobs$DateTimect >= as.POSIXct("2019-08-06 12:03:00") & Marbobs$DateTimect <= as.POSIXct("2019-08-10 12:03:23")), ]
 
@@ -289,12 +293,34 @@ nopaobs <- renodups[renodups$GO_RangeCode == "Nopa", ]
 nopacutobs <- nopaobs[(nopaobs$DateTimect >= as.POSIXct("2019-06-06 09:18:00") & nopaobs$DateTimect <= as.POSIXct("2019-06-13 11:04:00")) | (nopaobs$DateTimect >= as.POSIXct("2019-06-25 09:00:00") & nopaobs$DateTimect <= as.POSIXct("2019-07-08 12:35:00")) | (nopaobs$DateTimect >= as.POSIXct("2019-07-16 19:03:00") & nopaobs$DateTimect <= as.POSIXct("2019-07-29 15:06:00")) | (nopaobs$DateTimect >= as.POSIXct("2019-07-29 19:55:00") & nopaobs$DateTimect <= as.POSIXct("2019-08-07 14:49:00")),]
 
 allcut <- rbind(Marbcutobs, BrsScutobs, cmprcutobs, nopacutobs)
-write.xlsx(allcut, file = "allcutVisitationData122719.xlsx")
+# write.xlsx(allcut, file = "allcutVisitationData122719.xlsx")
 ```
 
 
 
 ```{r}
+# 5/17 - 8/10
+
+marballsheepvisitsday <- as.data.frame(table(Marbcutobs$KI_Known_ID, Marbcutobs$GO_Date))
+View(marballsheepvisitsday)
+as.character(marballsheepvisitsday$Freq)
+marballsheepvisitsday$Freq[marballsheepvisitsday$Freq == "2"] <- "1"
+marballsheepvisitsday$Freq[marballsheepvisitsday$Freq == "3"] <- "1"
+marballsheepvisitsday$Freq[marballsheepvisitsday$Freq == "4"] <- "1"
+marballsheepvisitsday$Freq[marballsheepvisitsday$Freq == "5"] <- "1"
+as.integer(marballsheepvisitsday$Freq)
+
+
+marbindsheepvisitperday <- as.data.frame(tapply(marballsheepvisitsday$Freq, list(marballsheepvisitsday$Var2), sum))
+View(marbindsheepvisitperday)
+
+# aggregate(marballsheepvisitsday$Freq, by = marballsheepvisitsday$Var2, FUN = "sum")
+# table(sum(marballsheepvisitsday$Freq))
+
+# head(table(unique(Marbcutobs$KI_Known_ID), Marbcutobs$GO_Date))
+(count(unique(Marbcutobs$KI_Known_ID))~ Marbcutobs$GO_Date)
+
+
 
 # df.expanded <- df[rep(row.names(df), df$freq), 1:2]
 ```
@@ -303,7 +329,6 @@ write.xlsx(allcut, file = "allcutVisitationData122719.xlsx")
 ```{r}
 # NOPAH PLOT
 
-library(rmarkdown)
 NopahData <- read.csv("NopahBighornVisitsSummer2019csv.csv", header = TRUE, sep = ",")
 View(NopahData)
 str(NopahData)
