--- a/BighornVisitationAnalysisSummer2019.Rmd
+++ b/BighornVisitationAnalysisSummer2019.Rmd
@@ -310,11 +310,15 @@ marballsheepvisitsday$Freq[marballsheepvisitsday$Freq == 5] <- 1
 marbindsheepvisitperday <- as.data.frame(tapply(marballsheepvisitsday$Freq, list(marballsheepvisitsday$Var2), sum))
 View(marbindsheepvisitperday)
 marbindsheepvisitperday <- cbind(rownames(marbindsheepvisitperday), data.frame(marbindsheepvisitperday, row.names = NULL))
+marbindsheepvisitperday$datenum <- as.character(marbindsheepvisitperday$`rownames(marbindsheepvisitperday)`)
+marbindsheepvisitperday$datenum <- as.Date(marbindsheepvisitperday$`rownames(marbindsheepvisitperday)`, format = "%Y-%m-%d")
+marbindsheepvisitperday$datenum <- as.numeric(marbindsheepvisitperday$datenum)
+
+barplot(tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2... ~ datenum, data = marbindsheepvisitperday, main = "Marbles Number of Individual Sheep Coming to Water by Day", xlab = "Date", ylab = "Number of Individual Sheep")
 
 
 
-
-
+plot(jitter ~ date, data = mergedvisit, type = "p", col = mergedvisit$sheep, main = "Nopah", xlab = "Date", ylab = "Visitations of Surface Water per Day")
 
 
 
