--- a/BighornVisitationAnalysisSummer2019.Rmd
+++ b/BighornVisitationAnalysisSummer2019.Rmd
@@ -323,8 +323,17 @@ marbdatena$datenum <- as.Date(marbdatena$datenum, format = "%Y-%m-%d")
 marbdatena$datenum <- as.numeric(marbdatena$datenum)
 marbindsheepvisitperday1 <- rbind(marbindsheepvisitperday, marbdatena)
 marbindsheepvisitperday1$tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2... <- as.integer(marbindsheepvisitperday1$tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2...)
+marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` <- as.Date(marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)`, "%Y-%m-%d")
 
-barplot(tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2... ~ datenum, data = marbindsheepvisitperday1, main = "Marbles Number of Individual Sheep Coming to Water by Day", xlab = "Date", ylab = "Number of Individual Sheep")
+#Barplot can't get NA spaces
+# barplot(tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2... ~ `rownames(marbindsheepvisitperday)`, data = marbindsheepvisitperday1, main = "Marbles Number of Individual Sheep Coming to Water by Day", xlab = "Date", ylab = "Number of Individual Sheep")
+# xlim = c(0, 85), width = 1
+
+# GGPLOT WORKS!
+library(ggplot2)
+ggplot(data = marbindsheepvisitperday1, aes(x = `rownames(marbindsheepvisitperday)`, y = tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2...)) +
+  geom_bar(stat="identity") + scale_x_date(limits = as.Date(c("2019-05-17", "2019-08-10"))) + ggtitle("Marbles Number of Individual Sheep Coming to Water by Day") + xlab("Date") + ylab("Number of Individual Sheep")
+
 
 
 
