--- a/BighornVisitationAnalysisSummer2019.Rmd
+++ b/BighornVisitationAnalysisSummer2019.Rmd
@@ -351,19 +351,30 @@ Marbcutobsrd <- Marbcutobs[(Marbcutobs$GO_Date != "2019-06-12") & (Marbcutobs$GO
 
 marballrd <- as.data.frame(table(Marbcutobsrd$KI_Known_ID, Marbcutobsrd$GO_Date))
 marbindrd <- as.data.frame(tapply(marballrd$Freq, list(marballrd$Var2), mean))
-marbindrd$sd <- as.data.frame(tapply(marballrd$Freq, list(marballrd$Var2), sd))
+marbindrd$sd <- tapply(marballrd$Freq, list(marballrd$Var2), sd)
 marbindrd <- cbind(rownames(marbindrd), data.frame(marbindrd, row.names = NULL))
-marbindsheepvisitperday <- cbind(rownames(marbindsheepvisitperday), data.frame(marbindsheepvisitperday, row.names = NULL))
 
 marbna2 <- read.csv("MarbNAv21120.csv", header = TRUE, sep = ",")
 marbna2$tapply.marballrd.Freq..list.marballrd.Var2.mean[marbna2$tapply.marballrd.Freq..list.marballrd.Var2.mean == "#N/A"] <- NA
 marbna2$sd.tapply.marballrd.Freq..list.marballrd.Var2...sd.[marbna2$sd.tapply.marballrd.Freq..list.marballrd.Var2...sd. == "#N/A"] <- NA
-# marbindrd <- rbind(marbindrd, marbna2)
+names(marbna2)[names(marbna2) == "rownames.marbindrd."] <- "rownames(marbindrd)"
+names(marbna2)[names(marbna2) == "tapply.marballrd.Freq..list.marballrd.Var2.mean"] <- "tapply.marballrd.Freq..list.marballrd.Var2...mean."
+names(marbna2)[names(marbna2) == "sd.tapply.marballrd.Freq..list.marballrd.Var2...sd."] <- "sd"
+marbindrd11 <- rbind(marbindrd, marbna2)
+marbindrd11$tapply.marballrd.Freq..list.marballrd.Var2...mean. <- as.numeric(marbindrd11$tapply.marballrd.Freq..list.marballrd.Var2...mean.)
+marbindrd11$sd <- as.numeric(marbindrd11$sd)
+marbindrd11$`rownames(marbindrd)` <- as.Date(marbindrd11$`rownames(marbindrd)` , "%Y-%m-%d")
+library(ggplot2)
 
 
-marbindsheepvisitperday1 <- rbind(marbindsheepvisitperday, marbdatena)
-marbindsheepvisitperday1$tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2... <- as.integer(marbindsheepvisitperday1$tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2...)
-marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` <- as.Date(marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)`, "%Y-%m-%d")
+
+library(ggplot2)
+ggplot(data = marbindsheepvisitperday1, aes(x = `rownames(marbindsheepvisitperday)`, y = tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2...)) +
+  geom_bar(stat="identity") + scale_x_date(limits = as.Date(c("2019-05-17", "2019-08-10"))) + ggtitle("Marbles Number of Individual Sheep Coming to Water by Day") + xlab("Date") + ylab("Number of Individual Sheep")
+
+
+
+
 
 # <- do.call("rbind", replicate(Marbcutobsrd[(Marbcutobsrd$KI_DG_FirstPhotoTime2)]))
 
