--- a/BighornVisitationAnalysisSummer2019.Rmd
+++ b/BighornVisitationAnalysisSummer2019.Rmd
@@ -301,12 +301,15 @@ I then created figures of the number of individual sheep coming into water by da
 # Number of Individual Sheep Coming into Water by Day
 
 marballsheepvisitsday <- as.data.frame(table(Marbcutobs$KI_Known_ID, Marbcutobs$GO_Date))
-View(marballsheepvisitsday)
-marballsheepvisitsday$Freq[marballsheepvisitsday$Freq == 2] <- 1
-marballsheepvisitsday$Freq[marballsheepvisitsday$Freq == 3] <- 1
-marballsheepvisitsday$Freq[marballsheepvisitsday$Freq == 4] <- 1
-marballsheepvisitsday$Freq[marballsheepvisitsday$Freq == 5] <- 1
-marbindsheepvisitperday <- as.data.frame(tapply(marballsheepvisitsday$Freq, list(marballsheepvisitsday$Var2), sum))
+# View(marballsheepvisitsday)
+
+marballsheepvisitsday1 <- marballsheepvisitsday[(marballsheepvisitsday$Var1 == "BHS_1367") |  (marballsheepvisitsday$Var1 == "BHS_1365") | (marballsheepvisitsday$Var1 == "BHS_1361") |(marballsheepvisitsday$Var1 == "BHS_1362") | (marballsheepvisitsday$Var1 == "BHS_1357") | (marballsheepvisitsday$Var1 == "BHS_1416") | (marballsheepvisitsday$Var1 == "BHS_1421") | (marballsheepvisitsday$Var1 == "BHS_1581") | (marballsheepvisitsday$Var1 == "BHS_1577") | (marballsheepvisitsday$Var1 == "BHS_1574") | (marballsheepvisitsday$Var1 == "BHS_1576") | (marballsheepvisitsday$Var1 == "BHS_1583") | (marballsheepvisitsday$Var1 == "BHS_1584") | (marballsheepvisitsday$Var1 == "BHS_1585") | (marballsheepvisitsday$Var1 == "BHS_1587") | (marballsheepvisitsday$Var1 == "BHS_1582") | (marballsheepvisitsday$Var1 == "BHS_1575") | (marballsheepvisitsday$Var1 == "BHS_1589") | (marballsheepvisitsday$Var1 == "BHS_1592") | (marballsheepvisitsday$Var1 == "BHS_1594") | (marballsheepvisitsday$Var1 == "BHS_1420") | (marballsheepvisitsday$Var1 == "BHS_1493") | (marballsheepvisitsday$Var1 == "BHS_1413") | (marballsheepvisitsday$Var1 == "BHS_1494") | (marballsheepvisitsday$Var1 == "BHS_1590") | (marballsheepvisitsday$Var1 == "BHS_1591") | (marballsheepvisitsday$Var1 == "BHS_1682") | (marballsheepvisitsday$Var1 == "BHS_1683") | (marballsheepvisitsday$Var1 == "BHS_1684") | (marballsheepvisitsday$Var1 == "BHS_1366") | (marballsheepvisitsday$Var1 == "BHS_1497") | (marballsheepvisitsday$Var1 == "BHS_1496") | (marballsheepvisitsday$Var1 == "BHS_1597") | (marballsheepvisitsday$Var1 == "BHS_1588") | (marballsheepvisitsday$Var1 == "BHS_1595"), ]
+
+marballsheepvisitsday1$Freq[marballsheepvisitsday1$Freq == 2] <- 1
+marballsheepvisitsday1$Freq[marballsheepvisitsday1$Freq == 3] <- 1
+marballsheepvisitsday1$Freq[marballsheepvisitsday1$Freq == 4] <- 1
+marballsheepvisitsday1$Freq[marballsheepvisitsday1$Freq == 5] <- 1
+marbindsheepvisitperday <- as.data.frame(tapply(marballsheepvisitsday1$Freq, list(marballsheepvisitsday1$Var2), sum))
 View(marbindsheepvisitperday)
 marbindsheepvisitperday <- cbind(rownames(marbindsheepvisitperday), data.frame(marbindsheepvisitperday, row.names = NULL))
 marbindsheepvisitperday$datenum <- as.character(marbindsheepvisitperday$`rownames(marbindsheepvisitperday)`)
@@ -319,10 +322,15 @@ marbindsheepvisitperday <- marbindsheepvisitperday[(marbindsheepvisitperday$`row
 marbdatena <- read.csv("TotalSheepVisitationPerDayMarbNAs122919.csv", header = TRUE, sep = ",")
 marbdatena$tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2...[marbdatena$tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2... == "#N/A"] <- NA
 names(marbdatena)[names(marbdatena) == "rownames.marbindsheepvisitperday."] <- "rownames(marbindsheepvisitperday)"
+
+names(marbindsheepvisitperday)[names(marbindsheepvisitperday) == "tapply.marballsheepvisitsday1.Freq..list.marballsheepvisitsday1.Var2..."] <- "visits"
+names(marbdatena)[names(marbdatena) == "tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2..."] <- "visits"
+
+
 marbdatena$datenum <- as.Date(marbdatena$datenum, format = "%Y-%m-%d")
 marbdatena$datenum <- as.numeric(marbdatena$datenum)
 marbindsheepvisitperday1 <- rbind(marbindsheepvisitperday, marbdatena)
-marbindsheepvisitperday1$tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2... <- as.integer(marbindsheepvisitperday1$tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2...)
+marbindsheepvisitperday1$visits <- as.integer(marbindsheepvisitperday1$visits)
 marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` <- as.Date(marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)`, "%Y-%m-%d")
 
 #Barplot can't get NA spaces
@@ -331,8 +339,8 @@ marbindsheepvisitperday1$`rownames(marbindsheepvisitperday)` <- as.Date(marbinds
 
 # GGPLOT WORKS!
 library(ggplot2)
-ggplot(data = marbindsheepvisitperday1, aes(x = `rownames(marbindsheepvisitperday)`, y = tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2...)) +
-  geom_bar(stat="identity") + scale_x_date(limits = as.Date(c("2019-05-17", "2019-08-10"))) + ggtitle("Marbles Number of Individual Sheep Coming to Water by Day") + xlab("Date") + ylab("Number of Individual Sheep")
+ggplot(data = marbindsheepvisitperday1, aes(x = `rownames(marbindsheepvisitperday)`, y = visits, fill = "supp")) +
+  geom_bar(stat="identity", color = "black") + scale_x_date(limits = as.Date(c("2019-05-17", "2019-08-10"))) + ggtitle("Marbles Number of Individual Sheep Coming to Water by Day") + xlab("Date") + ylab("Number of Individual Sheep") + theme(legend.position = "none")
 
 
 
@@ -365,15 +373,16 @@ marbindrd11$tapply.marballrd.Freq..list.marballrd.Var2...mean. <- as.numeric(mar
 marbindrd11$sd <- as.numeric(marbindrd11$sd)
 marbindrd11$`rownames(marbindrd)` <- as.Date(marbindrd11$`rownames(marbindrd)` , "%Y-%m-%d")
 library(ggplot2)
-
-
+p <- ggplot(data = marbindrd11, aes(x = `rownames(marbindrd)`, y = tapply.marballrd.Freq..list.marballrd.Var2...mean.)) + geom_point() + geom_errorbar(aes(ymin = tapply.marballrd.Freq..list.marballrd.Var2...mean. - sd, ymax = tapply.marballrd.Freq..list.marballrd.Var2...mean. + sd), width = .2)
+print(p)
+p + labs(title = "Marbles Mean Number of Visits Per Day Given All Collared Sheep")
 
 library(ggplot2)
-ggplot(data = marbindsheepvisitperday1, aes(x = `rownames(marbindsheepvisitperday)`, y = tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2...)) +
+marbvisitplot <- ggplot(data = marbindsheepvisitperday1, aes(x = `rownames(marbindsheepvisitperday)`, y = tapply.marballsheepvisitsday.Freq..list.marballsheepvisitsday.Var2...)) +
   geom_bar(stat="identity") + scale_x_date(limits = as.Date(c("2019-05-17", "2019-08-10"))) + ggtitle("Marbles Number of Individual Sheep Coming to Water by Day") + xlab("Date") + ylab("Number of Individual Sheep")
 
 
-
+### THIS IS WRONG BECAUSE CONSIDERS EVERY SHEEP NOT JUST MARBLES SHEEP!
 
 
 # <- do.call("rbind", replicate(Marbcutobsrd[(Marbcutobsrd$KI_DG_FirstPhotoTime2)]))
